--- a/gui/tags/ui-action-list/ui-action-list.css
+++ b/gui/tags/ui-action-list/ui-action-list.css
@@ -1,6 +1,6 @@
 :host {
 
-    font-family: 'Mew Sans SC', sans-serif;
+    font-family: 'Mew Sans', sans-serif;
     font-size: 12px;
     line-height: 30px;
 
