--- a/gui/styles/base.css
+++ b/gui/styles/base.css
@@ -26,5 +26,5 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 16px;
     margin: 0;
     padding: 0;
-    font-family: 'Mew Sans SC', 'Helvetica', 'Arial', sans-serif;
+    font-family: 'Mew Sans', 'Helvetica', 'Arial', sans-serif;
 }
