--- a/gui/tags/ui-window/ui-window.css
+++ b/gui/tags/ui-window/ui-window.css
@@ -11,7 +11,7 @@
     z-index: 1;
     backdrop-filter: blur(calc(3px * var(--ui-scale)));
     background-color: $alpha($white(1), 0.8);
-    font-family: 'Mew Sans SC', sans-serif;
+    font-family: 'Mew Sans', sans-serif;
     font-size: 13px;
     $transition(opacity, transform, 0.3s);
 }
